lexer/snapshots/lexer__tests__complex.snap
---
source: lexer/lib.rs
expression: "let five = 5;\nlet ten = 10;\n\nlet add = fn(x, y) {\n  x + y;\n};\n\nlet result = add(five, ten);\n!-/*5;\n5 < 10 > 5;\n\nif (5 < 10) {\n\treturn true;\n} else {\n\treturn false;\n}\n\n10 == 10;\n10 != 9;"
---
[
  {
    "kind": {
      "type": "LET"
    },
    "span": {
      "start": 0,
      "end": 3
    }
  },
  {
    "kind": {
      "type": "IDENTIFIER",
      "value": {
        "name": "five"
      }
    },
    "span": {
      "start": 4,
      "end": 8
    }
  },
  {
    "kind": {
      "type": "ASSIGN"
    },
    "span": {
      "start": 9,
      "end": 10
    }
  },
  {
    "kind": {
      "type": "INT",
      "value": 5
    },
    "span": {
      "start": 11,
      "end": 12
    }
  },
  {
    "kind": {
      "type": "SEMICOLON"
    },
    "span": {
      "start": 12,
      "end": 13
    }
  },
  {
    "kind": {
      "type": "LET"
    },
    "span": {
      "start": 14,
      "end": 17
    }
  },
  {
    "kind": {
      "type": "IDENTIFIER",
      "value": {
        "name": "ten"
      }
    },
    "span": {
      "start": 18,
      "end": 21
    }
  },
  {
    "kind": {
      "type": "ASSIGN"
    },
    "span": {
      "start": 22,
      "end": 23
    }
  },
  {
    "kind": {
      "type": "INT",
      "value": 10
    },
    "span": {
      "start": 24,
      "end": 26
    }
  },
  {
    "kind": {
      "type": "SEMICOLON"
    },
    "span": {
      "start": 26,
      "end": 27
    }
  },
  {
    "kind": {
      "type": "LET"
    },
    "span": {
      "start": 29,
      "end": 32
    }
  },
  {
    "kind": {
      "type": "IDENTIFIER",
      "value": {
        "name": "add"
      }
    },
    "span": {
      "start": 33,
      "end": 36
    }
  },
  {
    "kind": {
      "type": "ASSIGN"
    },
    "span": {
      "start": 37,
      "end": 38
    }
  },
  {
    "kind": {
      "type": "FUNCTION"
    },
    "span": {
      "start": 39,
      "end": 41
    }
  },
  {
    "kind": {
      "type": "LPAREN"
    },
    "span": {
      "start": 41,
      "end": 42
    }
  },
  {
    "kind": {
      "type": "IDENTIFIER",
      "value": {
        "name": "x"
      }
    },
    "span": {
      "start": 42,
      "end": 43
    }
  },
  {
    "kind": {
      "type": "COMMA"
    },
    "span": {
      "start": 43,
      "end": 44
    }
  },
  {
    "kind": {
      "type": "IDENTIFIER",
      "value": {
        "name": "y"
      }
    },
    "span": {
      "start": 45,
      "end": 46
    }
  },
  {
    "kind": {
      "type": "RPAREN"
    },
    "span": {
      "start": 46,
      "end": 47
    }
  },
  {
    "kind": {
      "type": "LBRACE"
    },
    "span": {
      "start": 48,
      "end": 49
    }
  },
  {
    "kind": {
      "type": "IDENTIFIER",
      "value": {
        "name": "x"
      }
    },
    "span": {
      "start": 52,
      "end": 53
    }
  },
  {
    "kind": {
      "type": "PLUS"
    },
    "span": {
      "start": 54,
      "end": 55
    }
  },
  {
    "kind": {
      "type": "IDENTIFIER",
      "value": {
        "name": "y"
      }
    },
    "span": {
      "start": 56,
      "end": 57
    }
  },
  {
    "kind": {
      "type": "SEMICOLON"
    },
    "span": {
      "start": 57,
      "end": 58
    }
  },
  {
    "kind": {
      "type": "RBRACE"
    },
    "span": {
      "start": 59,
      "end": 60
    }
  },
  {
    "kind": {
      "type": "SEMICOLON"
    },
    "span": {
      "start": 60,
      "end": 61
    }
  },
  {
    "kind": {
      "type": "LET"
    },
    "span": {
      "start": 63,
      "end": 66
    }
  },
  {
    "kind": {
      "type": "IDENTIFIER",
      "value": {
        "name": "result"
      }
    },
    "span": {
      "start": 67,
      "end": 73
    }
  },
  {
    "kind": {
      "type": "ASSIGN"
    },
    "span": {
      "start": 74,
      "end": 75
    }
  },
  {
    "kind": {
      "type": "IDENTIFIER",
      "value": {
        "name": "add"
      }
    },
    "span": {
      "start": 76,
      "end": 79
    }
  },
  {
    "kind": {
      "type": "LPAREN"
    },
    "span": {
      "start": 79,
      "end": 80
    }
  },
  {
    "kind": {
      "type": "IDENTIFIER",
      "value": {
        "name": "five"
      }
    },
    "span": {
      "start": 80,
      "end": 84
    }
  },
  {
    "kind": {
      "type": "COMMA"
    },
    "span": {
      "start": 84,
      "end": 85
    }
  },
  {
    "kind": {
      "type": "IDENTIFIER",
      "value": {
        "name": "ten"
      }
    },
    "span": {
      "start": 86,
      "end": 89
    }
  },
  {
    "kind": {
      "type": "RPAREN"
    },
    "span": {
      "start": 89,
      "end": 90
    }
  },
  {
    "kind": {
      "type": "SEMICOLON"
    },
    "span": {
      "start": 90,
      "end": 91
    }
  },
  {
    "kind": {
      "type": "BANG"
    },
    "span": {
      "start": 92,
      "end": 93
    }
  },
  {
    "kind": {
      "type": "MINUS"
    },
    "span": {
      "start": 93,
      "end": 94
    }
  },
  {
    "kind": {
      "type": "SLASH"
    },
    "span": {
      "start": 94,
      "end": 95
    }
  },
  {
    "kind": {
      "type": "ASTERISK"
    },
    "span": {
      "start": 95,
      "end": 96
    }
  },
  {
    "kind": {
      "type": "INT",
      "value": 5
    },
    "span": {
      "start": 96,
      "end": 97
    }
  },
  {
    "kind": {
      "type": "SEMICOLON"
    },
    "span": {
      "start": 97,
      "end": 98
    }
  },
  {
    "kind": {
      "type": "INT",
      "value": 5
    },
    "span": {
      "start": 99,
      "end": 100
    }
  },
  {
    "kind": {
      "type": "LT"
    },
    "span": {
      "start": 101,
      "end": 102
    }
  },
  {
    "kind": {
      "type": "INT",
      "value": 10
    },
    "span": {
      "start": 103,
      "end": 105
    }
  },
  {
    "kind": {
      "type": "GT"
    },
    "span": {
      "start": 106,
      "end": 107
    }
  },
  {
    "kind": {
      "type": "INT",
      "value": 5
    },
    "span": {
      "start": 108,
      "end": 109
    }
  },
  {
    "kind": {
      "type": "SEMICOLON"
    },
    "span": {
      "start": 109,
      "end": 110
    }
  },
  {
    "kind": {
      "type": "IF"
    },
    "span": {
      "start": 112,
      "end": 114
    }
  },
  {
    "kind": {
      "type": "LPAREN"
    },
    "span": {
      "start": 115,
      "end": 116
    }
  },
  {
    "kind": {
      "type": "INT",
      "value": 5
    },
    "span": {
      "start": 116,
      "end": 117
    }
  },
  {
    "kind": {
      "type": "LT"
    },
    "span": {
      "start": 118,
      "end": 119
    }
  },
  {
    "kind": {
      "type": "INT",
      "value": 10
    },
    "span": {
      "start": 120,
      "end": 122
    }
  },
  {
    "kind": {
      "type": "RPAREN"
    },
    "span": {
      "start": 122,
      "end": 123
    }
  },
  {
    "kind": {
      "type": "LBRACE"
    },
    "span": {
      "start": 124,
      "end": 125
    }
  },
  {
    "kind": {
      "type": "RETURN"
    },
    "span": {
      "start": 127,
      "end": 133
    }
  },
  {
    "kind": {
      "type": "TRUE"
    },
    "span": {
      "start": 134,
      "end": 138
    }
  },
  {
    "kind": {
      "type": "SEMICOLON"
    },
    "span": {
      "start": 138,
      "end": 139
    }
  },
  {
    "kind": {
      "type": "RBRACE"
    },
    "span": {
      "start": 140,
      "end": 141
    }
  },
  {
    "kind": {
      "type": "ELSE"
    },
    "span": {
      "start": 142,
      "end": 146
    }
  },
  {
    "kind": {
      "type": "LBRACE"
    },
    "span": {
      "start": 147,
      "end": 148
    }
  },
  {
    "kind": {
      "type": "RETURN"
    },
    "span": {
      "start": 150,
      "end": 156
    }
  },
  {
    "kind": {
      "type": "FALSE"
    },
    "span": {
      "start": 157,
      "end": 162
    }
  },
  {
    "kind": {
      "type": "SEMICOLON"
    },
    "span": {
      "start": 162,
      "end": 163
    }
  },
  {
    "kind": {
      "type": "RBRACE"
    },
    "span": {
      "start": 164,
      "end": 165
    }
  },
  {
    "kind": {
      "type": "INT",
      "value": 10
    },
    "span": {
      "start": 167,
      "end": 169
    }
  },
  {
    "kind": {
      "type": "EQ"
    },
    "span": {
      "start": 171,
      "end": 172
    }
  },
  {
    "kind": {
      "type": "INT",
      "value": 10
    },
    "span": {
      "start": 173,
      "end": 175
    }
  },
  {
    "kind": {
      "type": "SEMICOLON"
    },
    "span": {
      "start": 175,
      "end": 176
    }
  },
  {
    "kind": {
      "type": "INT",
      "value": 10
    },
    "span": {
      "start": 177,
      "end": 179
    }
  },
  {
    "kind": {
      "type": "NotEq"
    },
    "span": {
      "start": 181,
      "end": 182
    }
  },
  {
    "kind": {
      "type": "INT",
      "value": 9
    },
    "span": {
      "start": 183,
      "end": 184
    }
  },
  {
    "kind": {
      "type": "SEMICOLON"
    },
    "span": {
      "start": 184,
      "end": 185
    }
  },
  {
    "kind": {
      "type": "EOF"
    },
    "span": {
      "start": 185,
      "end": 186
    }
  }
]
