lexer/snapshots/lexer__tests__hash.snap
---
source: lexer/lib.rs
expression: "{\"one\": 1, \"two\": 2, \"three\": 3}"
---
[
  {
    "kind": {
      "type": "LBRACE"
    },
    "span": {
      "start": 0,
      "end": 1
    }
  },
  {
    "kind": {
      "type": "STRING",
      "value": "one"
    },
    "span": {
      "start": 1,
      "end": 6
    }
  },
  {
    "kind": {
      "type": "COLON"
    },
    "span": {
      "start": 6,
      "end": 7
    }
  },
  {
    "kind": {
      "type": "INT",
      "value": 1
    },
    "span": {
      "start": 8,
      "end": 9
    }
  },
  {
    "kind": {
      "type": "COMMA"
    },
    "span": {
      "start": 9,
      "end": 10
    }
  },
  {
    "kind": {
      "type": "STRING",
      "value": "two"
    },
    "span": {
      "start": 11,
      "end": 16
    }
  },
  {
    "kind": {
      "type": "COLON"
    },
    "span": {
      "start": 16,
      "end": 17
    }
  },
  {
    "kind": {
      "type": "INT",
      "value": 2
    },
    "span": {
      "start": 18,
      "end": 19
    }
  },
  {
    "kind": {
      "type": "COMMA"
    },
    "span": {
      "start": 19,
      "end": 20
    }
  },
  {
    "kind": {
      "type": "STRING",
      "value": "three"
    },
    "span": {
      "start": 21,
      "end": 28
    }
  },
  {
    "kind": {
      "type": "COLON"
    },
    "span": {
      "start": 28,
      "end": 29
    }
  },
  {
    "kind": {
      "type": "INT",
      "value": 3
    },
    "span": {
      "start": 30,
      "end": 31
    }
  },
  {
    "kind": {
      "type": "RBRACE"
    },
    "span": {
      "start": 31,
      "end": 32
    }
  },
  {
    "kind": {
      "type": "EOF"
    },
    "span": {
      "start": 32,
      "end": 33
    }
  }
]
