lexer/snapshots/lexer__tests__let.snap
---
source: lexer/lib.rs
expression: let x=5
---
[
  {
    "kind": {
      "type": "LET"
    },
    "span": {
      "start": 0,
      "end": 3
    }
  },
  {
    "kind": {
      "type": "IDENTIFIER",
      "value": {
        "name": "x"
      }
    },
    "span": {
      "start": 4,
      "end": 5
    }
  },
  {
    "kind": {
      "type": "ASSIGN"
    },
    "span": {
      "start": 5,
      "end": 6
    }
  },
  {
    "kind": {
      "type": "INT",
      "value": 5
    },
    "span": {
      "start": 6,
      "end": 7
    }
  },
  {
    "kind": {
      "type": "EOF"
    },
    "span": {
      "start": 7,
      "end": 8
    }
  }
]
