lexer/snapshots/lexer__tests__lexer_array.snap
---
source: lexer/lib.rs
expression: token_vs
---
[
    Token {
        span: Span {
            start: 0,
            end: 1,
        },
        kind: LBRACKET,
    },
    Token {
        span: Span {
            start: 1,
            end: 2,
        },
        kind: INT(
            3,
        ),
    },
    Token {
        span: Span {
            start: 2,
            end: 3,
        },
        kind: RBRACKET,
    },
    Token {
        span: Span {
            start: 3,
            end: 4,
        },
        kind: EOF,
    },
]
