lexer/snapshots/lexer__tests__lexer_bool.snap
---
source: lexer/lib.rs
expression: token_vs
---
[
    Token {
        start: 0,
        end: 3,
        kind: LET,
    },
    Token {
        start: 4,
        end: 5,
        kind: IDENTIFIER {
            name: "y",
        },
    },
    Token {
        start: 5,
        end: 6,
        kind: ASSIGN,
    },
    Token {
        start: 6,
        end: 10,
        kind: TRUE,
    },
    Token {
        start: 10,
        end: 11,
        kind: EOF,
    },
]
