lexer/snapshots/lexer__tests__lexer_hash.snap
---
source: lexer/lib.rs
expression: token_vs
---
[
    Token {
        span: Span {
            start: 0,
            end: 1,
        },
        kind: LBRACE,
    },
    Token {
        span: Span {
            start: 1,
            end: 6,
        },
        kind: STRING(
            "one",
        ),
    },
    Token {
        span: Span {
            start: 6,
            end: 7,
        },
        kind: COLON,
    },
    Token {
        span: Span {
            start: 8,
            end: 9,
        },
        kind: INT(
            1,
        ),
    },
    Token {
        span: Span {
            start: 9,
            end: 10,
        },
        kind: COMMA,
    },
    Token {
        span: Span {
            start: 11,
            end: 16,
        },
        kind: STRING(
            "two",
        ),
    },
    Token {
        span: Span {
            start: 16,
            end: 17,
        },
        kind: COLON,
    },
    Token {
        span: Span {
            start: 18,
            end: 19,
        },
        kind: INT(
            2,
        ),
    },
    Token {
        span: Span {
            start: 19,
            end: 20,
        },
        kind: COMMA,
    },
    Token {
        span: Span {
            start: 21,
            end: 28,
        },
        kind: STRING(
            "three",
        ),
    },
    Token {
        span: Span {
            start: 28,
            end: 29,
        },
        kind: COLON,
    },
    Token {
        span: Span {
            start: 30,
            end: 31,
        },
        kind: INT(
            3,
        ),
    },
    Token {
        span: Span {
            start: 31,
            end: 32,
        },
        kind: RBRACE,
    },
    Token {
        span: Span {
            start: 32,
            end: 33,
        },
        kind: EOF,
    },
]
