lexer/snapshots/lexer__tests__lexer_let.snap
---
source: lexer/lib.rs
expression: token_vs
---
[
    Token {
        start: 0,
        end: 3,
        kind: LET,
    },
    Token {
        start: 4,
        end: 5,
        kind: IDENTIFIER(
            "x",
        ),
    },
    Token {
        start: 5,
        end: 6,
        kind: ASSIGN,
    },
    Token {
        start: 6,
        end: 7,
        kind: INT(
            5,
        ),
    },
    Token {
        start: 7,
        end: 8,
        kind: EOF,
    },
]
