lexer/snapshots/lexer__tests__lexer_let_with_space.snap
---
source: lexer/lib.rs
expression: token_vs
---
[
    Token {
        kind: LET,
        span: Span {
            start: 0,
            end: 3,
        },
    },
    Token {
        kind: IDENTIFIER {
            name: "x",
        },
        span: Span {
            start: 4,
            end: 5,
        },
    },
    Token {
        kind: ASSIGN,
        span: Span {
            start: 6,
            end: 7,
        },
    },
    Token {
        kind: INT(
            5,
        ),
        span: Span {
            start: 8,
            end: 9,
        },
    },
    Token {
        kind: EOF,
        span: Span {
            start: 9,
            end: 10,
        },
    },
]
