lexer/snapshots/lexer__tests__lexer_simple.snap
---
source: lexer/lib.rs
expression: token_vs
---
[
    Token {
        start: 0,
        end: 1,
        kind: ASSIGN,
    },
    Token {
        start: 1,
        end: 2,
        kind: PLUS,
    },
    Token {
        start: 2,
        end: 3,
        kind: LPAREN,
    },
    Token {
        start: 3,
        end: 4,
        kind: RPAREN,
    },
    Token {
        start: 4,
        end: 5,
        kind: LBRACE,
    },
    Token {
        start: 5,
        end: 6,
        kind: RBRACE,
    },
    Token {
        start: 6,
        end: 7,
        kind: COMMA,
    },
    Token {
        start: 7,
        end: 8,
        kind: SEMICOLON,
    },
    Token {
        start: 8,
        end: 9,
        kind: EOF,
    },
]
